# lsif-indexer

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  COVERAGE_ANALYSIS.md  COVERAGE_IMPROVEMENT_PLAN.md  Cargo.toml  LSP_WORKSPACE_SYMBOL_DESIGN.md  Makefile  PERFORMANCE_ISSUES.md  PERFORMANCE_REPORT.md  README.md  TODO.md  USAGE.md  benchmark_incremental.sh  benchmark_real_projects.sh  benchmark_rust_analyzer.sh  lsp_symbols.json  optimization_report.md  output.lsif  test.lsif  test_call_hierarchy.sh  test_enhanced_features.sh  test_index.rs  test_lsif.sh  test_rust_analyzer.sh  test_rust_analyzer_speed.py  test_validity.sh  test_walk.rs
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badges.yml  ci.yml  release.yml
benches/: cache_benchmark.rs  fuzzy_search_benchmark.rs  index_benchmark.rs  index_performance_benchmark.rs  lockfree_benchmark.rs  memory_pool_benchmark.rs  multi_language_benchmark.rs  parallel_benchmark.rs  realistic_indexer_benchmark.rs  storage_benchmark.rs  string_intern_benchmark.rs  ultra_bench.rs
benches/fixtures/: large_code.rs
benchmark_results_20250818_044839/: benchmark_results.csv
benchmark_results_20250818_044904/: benchmark_results.csv  cache_bench.txt  parallel_bench.txt  storage_bench.txt
crates/cli/: Cargo.toml
crates/cli/src/: adaptive_parallel.rs  batch_graph_updater.rs  call_hierarchy_cmd.rs  cli.rs  definition_crawler.rs  differential_indexer.rs  fast_file_reader.rs  fuzzy_search.rs  generic_helpers.rs  git_diff.rs  improved_cli.rs  indexer.rs  lib.rs  lsp_unified_cli.rs  output_format.rs  parallel_processor.rs  reference_finder.rs  simple_cli.rs  storage.rs  symbol_extraction_strategy.rs  type_search.rs  workspace_symbol_strategy.rs
crates/cli/src/commands/: crawl.rs  definition.rs  index.rs  mod.rs  references.rs  search.rs  stats.rs  utils.rs
crates/cli/tests/: e2e_test.rs
crates/core/: Cargo.toml
crates/core/src/: call_hierarchy.rs  complexity.rs  definition_chain.rs  fuzzy_search.rs  graph.rs  graph_builder.rs  graph_query.rs  graph_serde.rs  incremental.rs  interned_graph.rs  lib.rs  lockfree_graph.rs  lsif.rs  memory_pool.rs  optimized_graph.rs  parallel.rs  public_api.rs  string_interner.rs  test_fixtures.rs  type_relations.rs
crates/core/src/fixtures/go/: main.go  utils.go
crates/core/src/fixtures/python/: main.py  utils.py
crates/core/src/fixtures/rust/: Cargo.toml  lib.rs  main.rs
crates/core/src/fixtures/typescript/: index.ts  tsconfig.json  utils.ts
crates/core/tests/: integration_test.rs
crates/engine/: Cargo.toml
crates/engine/src/: fuzzy.rs  lib.rs  query.rs  search.rs
crates/engine/src/adapters/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/lsp/: Cargo.toml
crates/lsp/examples/: benchmark_lsp_performance.rs
crates/lsp/src/: auto_switching_client.rs  common_adapter.rs  fallback_indexer.rs  go_adapter.rs  hierarchical_cache.rs  language_adapter.rs  language_detector.rs  language_optimization.rs  lib.rs  lsp_client.rs  lsp_commands.rs  lsp_features.rs  lsp_health_check.rs  lsp_helpers.rs  lsp_indexer.rs  lsp_integration.rs  lsp_manager.rs  lsp_metrics.rs  lsp_minimal_client.rs  lsp_performance_benchmark.rs  lsp_pool.rs  lsp_rpc_client.rs  optimized_io.rs  python_adapter.rs  regex_cache.rs  test_utils.rs  timeout_predictor.rs  tree_sitter_parser.rs  typescript_adapter.rs  unified_indexer.rs
crates/lsp/src/adapter/: common.rs  go.rs  language.rs  lsp.rs  minimal.rs  mod.rs  python.rs  rust.rs  tsgo.rs  typescript.rs
crates/lsp/tests/: integration_test.rs
docs/: CLAUDE.md  CLI_IMPROVEMENT_DEMO.md  DEVELOPMENT.md  DUPLICATION_ANALYSIS.md  IMPROVED_CLI.md  LSP_WORKSPACE_SYMBOL_DESIGN.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  README.md  adding-new-language-support.md  benchmark.md  language-agnostic-design.md  language-comparison.md  lockfree-implementation-details.md  lsp-performance-optimization.md  performance-implementation-guide.md  performance-optimization-analysis.md  performance-optimization-summary.md  roadmap.md  troubleshooting.md
examples/: fuzzy_search_example.rs  lsp_example.rs  simple_usage.rs  test_cache.rs  test_new_cli.rs  test_tsgo_lsp.rs  usage.sh
scripts/: ci-test-lsp.sh  clean.sh  debug-db.rs
src/: lib.rs  lsif_restore.rs  main.rs  test_utils.rs
src/cli/: advanced_lsp_client.rs  advanced_lsp_features.rs  cached_storage.rs  call_hierarchy_cmd.rs  common_adapter.rs  differential_indexer.rs  enhanced_indexer.rs  fallback_indexer.rs  fuzzy_search.rs  generic_helpers.rs  git_diff.rs  go_adapter.rs  incremental_storage.rs  indexer.rs  language_adapter.rs  language_detector.rs  lsp_adapter.rs  lsp_client.rs  lsp_commands.rs  lsp_features.rs  lsp_helpers.rs  lsp_indexer.rs  lsp_integration.rs  lsp_minimal_client.rs  minimal_language_adapter.rs  mod.rs  optimized_incremental.rs  parallel_storage.rs  python_adapter.rs  reference_finder.rs  simple_cli.rs  storage.rs  typescript_adapter.rs  ultra_fast_storage.rs
src/core/: call_hierarchy.rs  definition_chain.rs  enhanced_graph.rs  graph.rs  graph_builder.rs  graph_query.rs  graph_serde.rs  incremental.rs  lsif.rs  mod.rs  parallel.rs  type_relations.rs  (+1 more)
tests/: advanced_analysis_test.rs  advanced_lsp_test.rs  auto_update_test.rs  call_hierarchy_test.rs  cli_integration_test.rs  definition_chain_test.rs  differential_index_test.rs  differential_indexer_test.rs  e2e_tests.rs  git_diff_test.rs  gopls_integration_test.rs  graph_query_advanced_test.rs  graph_query_test.rs  graph_serde_test.rs  graph_test.rs  incremental_consistency_test.rs  incremental_test.rs  integration_test.rs  lsif_test.rs  lsp_advanced_features_test.rs  lsp_auto_switching_test.rs  lsp_integration_test.rs  lsp_minimal_integration_test.rs  lsp_reference_integration_test.rs  multi_language_test.rs  performance_test.rs  quick_performance_test.rs  reference_analysis_test.rs  references_test.rs  restore_scenario_test.rs  type_relations_test.rs  typescript_definition_debug_test.rs  typescript_e2e_test.rs  typescript_references_test.rs  typescript_simple_test.rs
(+14 files in other folders)
