[package]
name = "lsif-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# グラフデータ構造
petgraph = "0.6"

# 組み込みデータベース（単一ファイル用）
sled = "0.34"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# ログ
tracing = "0.1"
tracing-subscriber = "0.3"

# 日時
chrono = { version = "0.4", features = ["serde"] }

# LSP
lsp-types = "0.95"
lsp-server = "0.7"

# 非同期処理
tokio = { version = "1.0", features = ["full"] }

# 並列処理
rayon = "1.7"

[dev-dependencies]
# テスト用
tempfile = "3.0"
# ベンチマーク用
criterion = "0.5"

[[bench]]
name = "index_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false

[[bench]]
name = "index_performance_benchmark"
harness = false

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "cache_benchmark"
harness = false
