[package]
name = "lsif-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance code indexing tool with LSP support"
license = "MIT"
repository = "https://github.com/yourusername/lsif-indexer"
keywords = ["lsif", "lsp", "indexing", "code-analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "lsif"
path = "src/bin/lsif.rs"

[[bin]]
name = "lsif-indexer"
path = "src/bin/main.rs"

[dependencies]
# グラフデータ構造
petgraph = "0.6"

# 組み込みデータベース（単一ファイル用）
sled = "0.34"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 日時
chrono = { version = "0.4", features = ["serde"] }

# LSP
lsp-types = "0.95"
lsp-server = "0.7"

# 非同期処理
tokio = { version = "1.0", features = ["full"] }

# 並列処理
rayon = "1.7"
parking_lot = "0.12"

# ファイル操作
glob = "0.3"
notify = "6.0"
walkdir = "2.4"

# 正規表現
regex = "1.10"

# Git操作
git2 = "0.18"

# ハッシュ計算
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# プログレスバー
indicatif = "0.17"

# 圧縮（オプション）
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
# テスト用
tempfile = "3.0"
# ベンチマーク用
criterion = "0.5"
# ランダム数生成
rand = "0.8"

[[bench]]
name = "index_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false

[[bench]]
name = "index_performance_benchmark"
harness = false

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "multi_language_benchmark"
harness = false
