[package]
name = "lsif-indexer-workspace"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple_usage"
path = "examples/simple_usage.rs"

[dependencies]
lsif-core = { path = "crates/core" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
cli = { path = "crates/cli" }
lsp = { path = "crates/lsp" }
anyhow = { workspace = true }
lsp-types = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[workspace]
members = ["crates/core", "crates/lsp", "crates/cli", "crates/engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["mizchi <miz404@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mizchi/lsif-indexer"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Data structures
petgraph = { version = "0.6", features = ["serde-1"] }
dashmap = "5.5"

# Storage
sled = "0.34"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# LSP
lsp-types = "0.95"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# File operations
walkdir = "2.4"
ignore = "0.4"
glob = "0.3"
regex = "1.10"
notify = "6.1"

# VCS
git2 = "0.18"

# Utils
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Dev dependencies
tempfile = "3.8"
criterion = "0.5"

[workspace.dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tempfile = "3.8"
criterion = "0.5"