[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lsif"
path = "src/bin/lsif.rs"

[dependencies]
lsif-core = { path = "../core" }
lsp = { path = "../lsp" }
sled.workspace = true
petgraph.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lsp-types.workspace = true
tokio.workspace = true
clap.workspace = true
colored.workspace = true
indicatif.workspace = true
async-trait.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
glob.workspace = true
dashmap.workspace = true
git2.workspace = true
xxhash-rust.workspace = true
notify.workspace = true
thiserror.workspace = true
chrono.workspace = true
rmp-serde.workspace = true
bincode.workspace = true
rayon.workspace = true
num_cpus = "1.16"

[dev-dependencies]
lsif-core = { path = "../core", features = ["experimental-optimizations"] }
tempfile = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "index_benchmark"
harness = false
path = "../../benches/index_benchmark.rs"

[[bench]]
name = "index_performance_benchmark"
harness = false
path = "../../benches/index_performance_benchmark.rs"

[[bench]]
name = "storage_benchmark"
harness = false
path = "../../benches/storage_benchmark.rs"

[[bench]]
name = "parallel_benchmark"
harness = false
path = "../../benches/parallel_benchmark.rs"

[[bench]]
name = "multi_language_benchmark"
harness = false
path = "../../benches/multi_language_benchmark.rs"

[[bench]]
name = "memory_pool_benchmark"
harness = false
path = "../../benches/memory_pool_benchmark.rs"

[[bench]]
name = "string_intern_benchmark"
harness = false
path = "../../benches/string_intern_benchmark.rs"

[[bench]]
name = "fuzzy_search_benchmark"
harness = false
path = "../../benches/fuzzy_search_benchmark.rs"

[[bench]]
name = "realistic_indexer_benchmark"
harness = false
path = "../../benches/realistic_indexer_benchmark.rs"

[[example]]
name = "test_tsgo_lsp"
path = "../../examples/test_tsgo_lsp.rs"