[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
dashmap.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
chrono.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile = { workspace = true }