[package]
name = "lsif-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
dashmap.workspace = true
tracing.workspace = true
xxhash-rust.workspace = true
chrono.workspace = true
rayon.workspace = true
parking_lot = "0.12"
once_cell = "1.19"
crossbeam-skiplist = "0.1"
crossbeam-queue = "0.3"
crossbeam-epoch = "0.9"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
experimental-optimizations = []