[package]
name = "lsif-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
lsif-core = { path = "../core" }
lsp = { path = "../lsp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
regex = "1.10"
dashmap = "5.5"
rayon = "1.8"
fuzzy-matcher = "0.3"
pathdiff = "0.2"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.8"