[package]
name = "lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core = { path = "../core" }
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
clap.workspace = true
walkdir.workspace = true
ignore.workspace = true
glob.workspace = true
dashmap.workspace = true
git2.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = { workspace = true }